--- a/20_06/index.html
+++ b/20_06/index.html
@@ -5,10 +5,19 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
 	<body>
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nam aliquid
-		fugit dignissimos architecto, quidem laudantium ratione non minus ipsum
-		cupiditate eum rem maxime ullam quos sit possimus id officiis.
+		<form class="product_form">
+			<label>
+				<input placeholder="Название" name="title" type="text" />
+			</label>
+			<label>
+				<input placeholder="Цена" name="price" type="text" />
+			</label>
+			<button>Добавить!</button>
+		</form>
+		<div class="product-container"></div>
+		<script src="./scripts/script.js"></script>
 	</body>
 </html>
