--- a/20_06/index.html
+++ b/20_06/index.html
@@ -15,7 +15,7 @@
 			<label>
 				<input placeholder="Цена" name="price" type="text" />
 			</label>
-			<button>Добавить!</button>
+			<button>Добавить</button>
 		</form>
 		<div class="product-container"></div>
 		<script src="./scripts/script.js"></script>
